package dat.entities;

public enum SkillCategory
{
    PROG_LANG,
    DB,
    DEVOPS,
    FRONTEND,
    TESTING,
    DATA,
    FRAMEWORK;
}
